feat: signer keyconf database source.
Refs: XRDDEV-2756